# eventd-bindings

./: Makefile.am  README.md  configure.ac
helpers/: helpers.mk
helpers/include/: helpers.h
helpers/src/: helpers.c
lua/: lua.mk
lua/src/: eventc.lua  lua.c
lua/test/: test-plugin.lua
python/: python.mk
python/src/: eventc.py  python.c
python/test/: test-plugin.py
ruby/: ruby.mk
ruby/src/: eventc.rb  ruby.c
ruby/test/: test-plugin.rb
